Ubah WA logo jadi CALL

--- a/galeri.html
+++ b/galeri.html
@@ -100,8 +100,7 @@
             data-aos-easing="ease-in-back" 
             data-aos-offset="0" 
             type="submit">
-            <i class="fa fa-whatsapp"></i>
-            0813.1818.0918
+            CALL 0813.1818.0918
             </button>
           </a>
         </div>
