Remove aos on cta-btn-top

--- a/galeri.html
+++ b/galeri.html
@@ -94,12 +94,7 @@
         </nav>
         <div class="cta-btn-top-container sticky-top align-self-center text-center">
           <a href="https://wa.me/6281318180918">
-            <button class="btn rounded-pill shadow-sm cta-btn-top aos-init aos-animate"
-            data-aos="fade-up" 
-            data-aos-delay="300" 
-            data-aos-easing="ease-in-back" 
-            data-aos-offset="0" 
-            type="submit">
+            <button class="btn rounded-pill shadow-sm cta-btn-top" type="submit">
             CALL 0813.1818.0918
             </button>
           </a>
