WhatsApp Opengraph Update

--- a/galeri.html
+++ b/galeri.html
@@ -36,6 +36,14 @@
     
     <title>Galeri Berkah Scooter Towing</title>
 
+
+    <meta property="og:site_name" content="Berkah Scooter Towing">
+    <meta property="og:title" content="Berkah Scooter Towing" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image:secure_url" itemprop="image" content="https://berkahscootertowing.com/assets/images/logo_berkah_scooter_towing_large.jpeg">
+    <meta property="og:image:type" content="image/jpeg" />
+    <meta property="og:image:alt" content="Logo Berkah Scooter Towing" />
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <!-- Global site tag (gtag.js) - Google Ads: 1040810334 -->
     <!-- Event snippet for Website sale conversion page -->
