--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Towing Service">
-    <meta name="keywords" content="Towing Service Jakarta">
+    <meta name="description" content="Berkah Scooter Towing memberikan pengalaman luar biasa bagi komunitas">
+    <meta name="keywords" content="Towing Service Jakarta, Towing Service Bekasi">
 
     <!-- Bootstrap CSS -->
     <link rel="preload" href="assets/css/bootstrap.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
@@ -38,8 +38,10 @@
     
     <title>Berkah Scooter Towing</title>
 
+    <meta property="og:site_name" content="Berkah Scooter Towing">
     <meta property="og:title" content="Berkah Scooter Towing" />
-    <meta property="og:image" content="/assets/images/logo_berkah_scooter_towing_large.jpeg" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image:secure_url" itemprop="image" content="https://berkahscootertowing.com/assets/images/logo_berkah_scooter_towing_large.jpeg">
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:alt" content="Logo Berkah Scooter Towing" />
     <!-- Global site tag (gtag.js) - Google Analytics -->
