--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     </li>                
                     <li class="nav-item nav-contact">
                       &nbsp; <i class="fa fa-phone fa-1x fa-phone" aria-hidden="true" style="vertical-align: middle; color: #fff;"></i>
-                      <a class="nav-link" href="https://wa.me/6281318180918"> 0813 1818 0918</a>
+                      <a class="nav-link" href="http://bit.ly/3ip8iE2"> 0813 1818 0918</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link"></a>
@@ -101,7 +101,7 @@
             </div>
           </nav>
           <div class="cta-btn-top-container sticky-top align-self-center text-center">
-            <a href="https://wa.me/6281318180918">
+            <a href="http://bit.ly/3ip8iE2">
               <button class="btn rounded-pill shadow-sm cta-btn-top" type="submit">
               CALL 0813.1818.0918            
               </button>
@@ -120,7 +120,7 @@
             <h2 class="header-copy">KAMI SIAP SUPPORT 24 JAM NON STOP</h2>
             <h2 class="header-copy">HARGA SPESIAL</h2>
             <h4 class="header-copy yellow-color">#YANGPENTINGBERKAH</h4>
-            <a href="https://wa.me/6281318180918">
+            <a href="http://bit.ly/3ip8iE2">
               <button class="btn rounded-pill shadow-sm cta-btn aos-init aos-animate"
               data-aos="fade-up" 
               data-aos-delay="300" 
@@ -222,7 +222,7 @@
 
             <div class="col-md-12 col-xs-12">
               <div>
-                <a href="https://wa.me/6281318180918">
+                <a href="http://bit.ly/3ip8iE2">
                   <button class="btn rounded-pill shadow-sm cta-btn align-self-center"
                     type="submit">
                   Hubungi Kami
@@ -305,10 +305,10 @@
           <div class="col-md-4 col-sm-4 col-xs-4 footer-hubungi-kami">
             <h3>Hubungi Kami</h3>                        
             <i class="fa fa-phone fa-1.5x fa-phone" aria-hidden="true" style="vertical-align: middle; color: #ffffff;"></i>
-            &nbsp; <a href="https://wa.me/6281318180918">0812.1978.1995</a> (Jual/Beli)
+            &nbsp; <a href="https://wa.me/6281219781995">0812.1978.1995</a> (Jual/Beli)
             <br />
             <i class="fa fa-phone fa-1.5x fa-phone" aria-hidden="true" style="vertical-align: middle; color: #ffffff;"></i>
-            &nbsp; <a href="https://wa.me/6281318180918">0813.1818.0918</a> (Towing)
+            &nbsp; <a href="http://bit.ly/3ip8iE2">0813.1818.0918</a> (Towing)
             <br/>
             <i class="fa fa-envelope fa-1.5x fa-envelope" aria-hidden="true" style="vertical-align: middle; color: #ffffff;"></i>
             &nbsp; berkah.scooter@gmail.com
@@ -330,7 +330,7 @@
           <i class="fa fa-instagram fa-1x floating-instagram"></i>
         </a>
 
-        <a href="https://wa.me/6281318180918" class="float" target="_blank">
+        <a href="http://bit.ly/3ip8iE2" class="float" target="_blank">
           <i class="fa fa-whatsapp fa-1x floating-wa"></i>
         </a>
 
